2007-02-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.cpp (NewBond): Fix PR#1665649. Make sure to set the
	parent of a newly-created bond.

	* test/mol.cpp: Add test for above.

	* src/formats/Makefile.am, src/formats/Makefile.in: Fix linking
	problems on Linux discovered by Craig.

2007-02-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/*.i, scripts/*: Add access to OBForceField classes and methods.

	* tools/obprop.cpp: Remove "test" methods, introduced sometime
	since the last release.

	* tools/obmm.cpp: Make sure to set the OBForceField log to prevent
	crashes (e.g., PR#1664279).

	* Doxyfile: Bump version number to 2.1.0b6 for new snapshot.

	* configure.in, configure: Bump to 2.1.0b6 for new snapshot.

	* src/forcefield.cpp, tools/obrotamer.cpp: Update to use
	std::vector instead of arrays.

	* src/rotamer.h, src/rotamer.cpp: Update documentation to use
	std::vector. Fixes compile problems on Windows.
	AddRotamer(std::vector) New method for above.

	* src/base.cpp: Documentation updates.

	* src/canon.cpp, src/forcefield.cpp: Likewise.

	* include/openbabel/ring.h, generic.h, pluginiter.h, canon.h,
	forcefield.h, lineend.h: Likewise.

	* src/all.h, src/formats/all.h, src/Makefile.am, src/Makefile.in,
	src/formats/Makefile.am, src/formats/Makefile.in: Update to allow
	using precompiled headers again.

	* src/canon.cpp, src/formats/cansmilesformat.cpp: Fix crash caused
	by linking problem. CanonicalLabels() moved to the Open Babel namespace.

2007-02-20  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: UpdateCoordinates now 'knows' about conformers
	and selects the correct one before returning.

	* tools/obminimize.cpp: Implemented (was copy of obmm).

2007-02-18  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Added vector analysis methods 
	VectorLengthDerivative(), VectorAngleDerivative(), 
	VectorTorsionDerivative()
